objects/Position__c.object
<CustomObject>
    <fields>
        <fullName>C_Sharp__c</fullName>
        <defaultValue>false</defaultValue>
        <label>C-Sharp</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>C__c</fullName>
        <defaultValue>false</defaultValue>
        <label>C</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Close_Date__c</fullName>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Educational_Qualifications__c</fullName>
        <label>Educational Qualifications</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Full_time__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Full time</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Functional_Area__c</fullName>
        <label>Functional Area</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Information_technology</fullName>
                    <label>Information Technology</label>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Warehousing</fullName>
                </value>
                <value>
                    <fullName>Retail Operations</fullName>
                </value>
                <value>
                    <fullName>Human Resources</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hello__c</fullName>
        <label>Hello</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hiring_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Hiring Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Positions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JavaScript__c</fullName>
        <defaultValue>false</defaultValue>
        <label>JavaScript</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Job_Level__c</fullName>
        <label>Job Level</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Functional_Area__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>IT-100</fullName>
                </value>
                <value>
                    <fullName>IT-200</fullName>
                </value>
                <value>
                    <fullName>IT-300</fullName>
                </value>
                <value>
                    <fullName>SA-100</fullName>
                </value>
                <value>
                    <fullName>SA-200</fullName>
                </value>
                <value>
                    <fullName>SA-300</fullName>
                </value>
                <value>
                    <fullName>MK-100</fullName>
                </value>
                <value>
                    <fullName>MK-200</fullName>
                </value>
                <value>
                    <fullName>RO-100</fullName>
                </value>
                <value>
                    <fullName>RO-200</fullName>
                </value>
                <value>
                    <fullName>RO-300</fullName>
                </value>
                <value>
                    <fullName>RO-400</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Job_Responsibilities__c</fullName>
        <defaultValue>&quot;The Job Responsibilities are&quot;</defaultValue>
        <label>Job Responsibilities</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Maximum_Pay__c</fullName>
        <label>Maximum Pay</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Minimum_Pay__c</fullName>
        <label>Minimum Pay</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>No_of_days_open__c</fullName>
        <formula>IF(
 ISBLANK(Close_Date__c),
 Today() - Open_Date__c,
 Close_Date__c - Open_Date__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>No of days open</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Open_Date__c</fullName>
        <label>Open Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ruby__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ruby</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New Position</fullName>
                    <default>true</default>
                    <label>New Position</label>
                </value>
                <value>
                    <fullName>Open - Approved</fullName>
                </value>
                <value>
                    <fullName>Closed - Filled</fullName>
                </value>
                <value>
                    <fullName>Closed - Not Approved</fullName>
                </value>
                <value>
                    <fullName>Closed - Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Position</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Position Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Positions</pluralLabel>
    <recordTypes>
        <fullName>IT_Position</fullName>
        <active>true</active>
        <label>IT Position</label>
    </recordTypes>
    <recordTypes>
        <fullName>Non_IT_Position</fullName>
        <active>true</active>
        <label>Non-IT Position</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <sharingReasons>
        <fullName>Reason_2__c</fullName>
        <label>Reason 2</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>Sharing_Reason_1__c</fullName>
        <label>Sharing Reason 1</label>
    </sharingReasons>
    <validationRules>
        <fullName>Close_Date_Rule</fullName>
        <active>true</active>
        <description>If the Status of the position is changed to &quot;Closed-Filled&quot; or &quot;Closed-Cancelled&quot; or &quot;Closed-Cancelled&quot;, make sure that the close date is filled.</description>
        <errorConditionFormula>(ISPICKVAL( Status__c , &quot;Closed-Filled&quot;) ||
 ISPICKVAL( Status__c , &quot;Closed-Cancelled&quot;)||
 ISPICKVAL( Status__c , &quot;Closed-Not Approved&quot;))
 &amp;&amp; 
 ISBLANK( Close_Date__c )</errorConditionFormula>
        <errorDisplayField>Close_Date__c</errorDisplayField>
        <errorMessage>Please fill in the close date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Max_Pay_Rule</fullName>
        <active>true</active>
        <description>Prevent the user from saving a record if the maximum pay is less than the minimum pay.</description>
        <errorConditionFormula>Minimum_Pay__c &gt; Maximum_Pay__c</errorConditionFormula>
        <errorDisplayField>Maximum_Pay__c</errorDisplayField>
        <errorMessage>Please enter a value greater than or equal to Minimum Pay</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Min_Pay_Rule</fullName>
        <active>true</active>
        <description>Prevent the user from saving a record if the min pay is less than 30,000</description>
        <errorConditionFormula>Minimum_Pay__c &lt; 30000</errorConditionFormula>
        <errorDisplayField>Minimum_Pay__c</errorDisplayField>
        <errorMessage>Please enter a value greater than or equal to 30000</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Rule_for_Open_Date</fullName>
        <active>true</active>
        <description>The open date should be the current date or any date in the future</description>
        <errorConditionFormula>Open_Date__c &lt;  TODAY()</errorConditionFormula>
        <errorDisplayField>Open_Date__c</errorDisplayField>
        <errorMessage>Please enter todays date or any date in the future</errorMessage>
    </validationRules>
</CustomObject>